--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,12 @@
 ---
-import { sortByPin } from "@/shared/tag";
-import Home from "../components/Home.astro";
+import Home from "@/components/Home.astro";
 import { getPageList } from "./api/post/list";
 import config from "urodele.config";
-const posts = sortByPin(await getPageList());
+import { sortByPin } from "@/shared/tag";
 
+const allPosts = sortByPin(await getPageList());
 const pageSize = config.pagination.size;
+const posts = allPosts.slice(0, pageSize);
 ---
 
-<Home posts={posts.slice(0, pageSize)} page={0} pages={Math.ceil(posts.length / pageSize)} />
+<Home posts={posts} page={0} pages={Math.ceil(allPosts.length / pageSize)} />
