--- a/src/pages/tag/index.astro
+++ b/src/pages/tag/index.astro
@@ -1,12 +1,12 @@
 ---
-import Layout from "@/layouts/Layout.astro";
+import BaseLayout from "@/layouts/BaseLayout.astro";
 import { getPageList } from "@/pages/api/post/list";
 
 const posts = await getPageList();
 const tags = [...new Set(posts.map((p) => p.tags).flat())];
 ---
 
-<Layout title="Tags">
+<BaseLayout title="Tags">
   <main>
     <div class="content flex flex-wrap items-center justify-center py-2 px-4 gap-4">
       {
@@ -18,4 +18,4 @@ const tags = [...new Set(posts.map((p) => p.tags).flat())];
       }
     </div>
   </main>
-</Layout>
+</BaseLayout>
